test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/Final-Project-275/Final-Project-275/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      11 | import { User } from "./Interfaces/UserObject";
      12 | import { Navbar } from "./Components/NavBar";
    > 13 | import { DndProvider } from "react-dnd";
         | ^
      14 | import { HTML5Backend } from "react-dnd-html5-backend";
      15 | import {
      16 |     ExampleDragableMealItemForTesting,

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/App.tsx:13:1)

----------------------------|---------|----------|---------|---------|-------------------
File                        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------------|---------|----------|---------|---------|-------------------
All files                   |       0 |        0 |       0 |       0 |                   
 src                        |       0 |      100 |       0 |       0 |                   
  App.tsx                   |       0 |      100 |       0 |       0 | 24-42             
 src/Components             |       0 |        0 |       0 |       0 |                   
  AddUser.tsx               |       0 |        0 |       0 |       0 | 14-56             
  Draggable.tsx             |       0 |        0 |       0 |       0 | 5-82              
  MealItem.tsx              |       0 |      100 |     100 |       0 | 12                
  NavBar.tsx                |       0 |      100 |       0 |       0 | 7-43              
  SuperUserButton.tsx       |       0 |        0 |       0 |       0 | 6-13              
  UserDropdown.tsx          |       0 |      100 |       0 |       0 | 17-50             
  UserList.tsx              |       0 |        0 |       0 |       0 | 11-87             
  UserSelect.tsx            |       0 |        0 |       0 |       0 | 14-56             
  UserTypeIndicator.tsx     |       0 |        0 |       0 |       0 | 5                 
  UserTypeSelectButtons.tsx |       0 |      100 |       0 |       0 | 8-12              
  addToUserList.tsx         |       0 |      100 |       0 |       0 | 17-24             
 src/Interfaces             |       0 |      100 |     100 |       0 |                   
  MealObject.tsx            |       0 |      100 |     100 |       0 | 23                
  UserObject.tsx            |       0 |        0 |       0 |       0 |                   
  currentUserProps.ts       |       0 |        0 |       0 |       0 |                   
  userListProps.ts          |       0 |        0 |       0 |       0 |                   
  userTypeProps.ts          |       0 |        0 |       0 |       0 |                   
----------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.039 s
Ran all test suites.
